--- a/src/datastructures/Tree.scss
+++ b/src/datastructures/Tree.scss
@@ -19,6 +19,9 @@
       border: 1px solid #000;
       border-radius: 5px;
       background: #fff;
+      &.selected {
+        background-color: blue;
+      }
     }
 
     &:first-child {
