--- a/src/algorithms/BinarySearchArray.scss
+++ b/src/algorithms/BinarySearchArray.scss
@@ -1,13 +1,13 @@
 .array.binary-search {
   .low {
-    background-color: yellow;
+    background-color: darkgoldenrod;
   }
 
   .high {
-    background-color: red;
+    background-color: darkred;
   }
 
   .mid {
-    background-color: blue;
+    background-color: darkblue;
   }
 }
