--- a/src/datastructures/Array.scss
+++ b/src/datastructures/Array.scss
@@ -4,7 +4,7 @@
   padding-left: 0;
 
   li {
-    border: 1px solid white;
-    padding: 10px;
+    border: 1px solid black;
+    padding: 5px;
   }
 }
